--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "robot-t410-app",
+  "name": "robot-t410-webapp",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://192.168.100.10",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
