--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
   "name": "robot-t410-webapp",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://192.168.100.10",
+  "proxy": "http://192.168.60.108",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
+    "dotenv": "^8.2.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "ws": "^7.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
