Updates to support release OS

--- a/rootfs/etc/hiawatha/hiawatha.conf
+++ b/rootfs/etc/hiawatha/hiawatha.conf
@@ -67,7 +67,7 @@ CGIextension = sh
 #UseFastCGI = PHP5
 ExecuteCGI = yes
 CGIwrapper = /usr/sbin/cgi-wrapper
-#Wrap = wrap_root ; /var/www/hiawatha/cgi ; root
+# wrap = wrap_root ; /var/www/hiawatha/cgi ; 0:0
 
 # URL TOOLKIT
 # This URL toolkit rule was made for the Banshee PHP framework, which
